# ProjectVeil

./: .gitignore  CMakeLists.txt  Changelog.txt
src/gameLayer/: AssetManager.cpp  AssetManager.h  DeveloperWindow.cpp  DeveloperWindow.h  GameObject.cpp  GameObject.h  Inventory.cpp  Inventory.h  MiniGame.h  ParticleSystem.cpp  ParticleSystem.h  Physics.cpp  Physics.h  Player.cpp  Player.h  PlayerCamera.cpp  PlayerCamera.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Transition.cpp  gameMain.cpp  gameMain.h  gameMap.cpp  gameMap.h  physics.txt
src/gameLayer/minigames/: FlappyBird.cpp  FlappyBird.h
src/gameLayer/scenes/: mainMenu.cpp  mainMenu.h
src/platform/: ProjectVeil.cpp  ProjectVeil.h
